<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Meltdown</string>
    <string name="menu_settings">Server setup</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_about">About</string>
    <string name="title_activity_groups">Groups</string>
    <string name="next_item">Next item</string>
    <string name="title_activity_item_display">Items</string>
    <string name="menu_load_page">Open URL</string>
    <string name="itmBtnOpen">Open URL</string>
    <string name="itmBtnNext">Next</string>
    <string name="mgdMarkAllRead">Mark all items in group as read</string>
    <string name="mgdMARb">Mark all read</string>
    <string name="itmShare">Share</string>
    <string name="itmSave">Save on server</string>
    <string name="itmSaveShort">Save</string>
    <string name="itmTitle">Item title placeholder</string>
    <string name="itmFeedTitle">Item feed title placeholder</string>
    <string name="lvPlaceholder">Waiting for data.</string>
    <string name="title_activity_about">About</string>
    <string name="vanityBlurb">Meltdown is an open source RSS client for &lt;a href="http://feedafever.com"&gt;Fever&lt;/a&gt; and is written by &lt;a href="mailto:pfh@phfactor.net"&gt;Paul Hubbard.&lt;/a&gt; 
        Please see &lt;a href="github.com/phubbard/Meltdown"&gt;Github for source code&lt;/a&gt;. Also includes code from https://github.com/MoriTanosuke and https://github.com/flurischt.</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_item_list">Items</string>
    <string name="mnuPost">Post item</string>
    <string name="mnuZoomOut">Zoom out</string>
    <string name="mnuAddOneWeek">Remind me next week</string>
    <string name="mnuCondsNW">Next week</string>
    <string name="loginOK">Logged in OK!</string>
    <string name="loginBad">Login error, please correct data</string>
    <string name="warnNoPost">Post URL not configured</string>
    <string name="hello_world">Hello world!</string>
    <string name="unknown">unknown</string>
    <string name="title_activity_setup_post_url">Setup User URL</string>
    <string name="postItemDocstring">Here you can setup a URL to call with the RSS item. It\'s invoked by the \'Post URL\' menu item in item view. This gets rewritten, so you can optionally use ${title}, ${url}, and ${source}. This lets you add your own hooks to Meltdown for items and perhaps send them off to an arbitrary server such as Campfire or the like.</string>
    <string name="postItemExampleUrl">http://example.com/api/src=${source}&amp;title=${title}&amp;url=${url}</string>
    <string name="postToast">Item sent!</string>
    <string name="viFavicon">Favicon from the feed site</string>
    <string name="viSource">This is the placeholder name for a very long source.</string>
    <string name="viTime">About 3 weeks ago.</string>
    <string name="viTitle">Post title. Superlong example to force wraparound and exercise the layout.</string>
    <string name="viSubtitle">Post excerpt goes here, up to 72 characters, which is kind of magic but works OK most of the time.</string>
    <string name="stOffline">Offline</string>
    <string name="prefIntTitle">Refresh interval</string>
    <string name="prefIntSummary">How often Meltdown syncs with Fever</string>
    <string name="menu_prefs">Preferences</string>
    <string name="menu_cond_prefs">Prefs</string>
    <string-array name="intervals">
        <item>Manual</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>
    <string-array name="intervalValues">
        <item>0</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>43200000</item>
        <item>86400000</item>
    </string-array>
    <string name="prefBoolDisableSpark">Disable loading of Sparks</string>
    <string name="actionGroups">Updating groups</string>
    <string name="actionFeeds">Updating feeds</string>
    <string name="actionItems">Updating items</string>
    <string name="actionIcons">Updating feed icons</string>
    <string name="actionCache">Reloading and reconciling cache</string>
    <string name="force_quit">Force app quit</string>
</resources>