<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    >
<TextView  
    android:id="@+id/item_title"
    android:text="@string/viTitle"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:padding="2dp"
    android:textSize="16sp" />
    <TextView  
    android:id="@+id/item_subtitle"
    android:text="@string/viSubtitle"
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:padding="2dp"
    android:textSize="12sp" />
 <LinearLayout 
    android:orientation="vertical"
    android:id="@+id/ivFeedTS"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/item_feed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:maxLines="@integer/one_line"
         android:text="@string/viSource"
         android:textColor="@android:color/holo_red_light" />

     <TextView
         android:id="@+id/item_timestamp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:text="@string/viTime"
         android:textColor="@android:color/holo_red_light" />

 </LinearLayout>    
</LinearLayout>
